# build_and_battle

./: .gitignore  CMakeLists.txt
deploy/Data/Textures/UI/: selection_rect.xcf
import/: basic_tile.dae
include/: build_and_battle.h  camera_controller.h  editor_selection_controller.h  editor_selector.h  hex_tile_grid.h  input_translator.h  math_utils.h  mtdebug_print.h  tile_occupier.h  typedefs.h
src/: build_and_battle.cpp  camera_controller.cpp  editor_selection_controller.cpp  editor_selector.cpp  hex_tile_grid.cpp  input_translator.cpp  input_translator.h  mtdebug_print.cpp  tile_occupier.cpp  urho_common.h
src/game/: build_and_battle.cpp  build_and_battle.h
src/toolkit/: bbtoolkit.cpp  bbtoolkit.h  camera_controller.cpp  camera_controller.h  selection_controller.cpp  selection_controller.h  selector.cpp  selector.h
